tests/baselines/reference/decoratorOnClass8.errors.txt
tests/cases/conformance/decorators/class/decoratorOnClass8.ts(3,1): error TS1220: Invalid expression for class decorator.
  Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/decorators/class/decoratorOnClass8.ts (1 errors) ====
    declare function dec(): (target: Function, paramIndex: number) => void;
    
    @dec()
    ~~~~~~
!!! error TS1220: Invalid expression for class decorator.
!!! error TS1220:   Supplied parameters do not match any signature of call target.
    class C {
    }